# NOKIA-PK

./: .gitignore  CMakeLists.txt  README.md  internal_commands.cmake  myGitBranches
.github/workflows/: ccpp.yml
BTS/: .gitignore  CMakeLists.txt  main.cpp
BTS/Application/: Application.cpp  Application.hpp  ApplicationFactory.cpp  ApplicationFactory.hpp  CMakeLists.txt  ConsoleCommands.cpp  ConsoleCommands.hpp  IComponent.cpp  IComponent.hpp  SibMolester.cpp  SibMolester.hpp  Synchronization.cpp  Synchronization.hpp
BTS/Application/UeConnection/: IUeConnection.cpp  IUeConnection.hpp  IUeConnectionFactory.cpp  IUeConnectionFactory.hpp  UeConnection.cpp  UeConnection.hpp  UeConnectionFactory.cpp  UeConnectionFactory.hpp  UeConnectionSpawner.cpp  UeConnectionSpawner.hpp  UeSlot.cpp  UeSlot.hpp
BTS/Application/UeRelay/: IUeRelay.cpp  IUeRelay.hpp  UeRelay.cpp  UeRelay.hpp
BTS/ApplicationEnvironment/: ApplicationEnvironmentFactory.cpp  ApplicationEnvironmentFactory.hpp  CMakeLists.txt  IApplicationEnvironment.hpp  IConsole.cpp  IConsole.hpp  ITransport.hpp
BTS/QtApplicationEnvironment/: ApplicationEnvironment.cpp  ApplicationEnvironment.hpp  ApplicationEnvironmentFactory.cpp  CMakeLists.txt
BTS/QtApplicationEnvironment/Console/: CMakeLists.txt  TextConsole.cpp  TextConsole.hpp
BTS/QtApplicationEnvironment/Transport/: CMakeLists.txt  QtTransport.cpp  QtTransport.hpp  QtTransportEnvironment.cpp  QtTransportEnvironment.hpp
BTS/Tests/: .gitignore  CMakeLists.txt
BTS/Tests/Application/: ApplicationTestSuite.cpp  ApplicationTestSuite.hpp  CMakeLists.txt  ConsoleCommandsTestSuite.cpp  ConsoleCommandsTestSuite.hpp  SibMolesterTestSuite.cpp  SibMolesterTestSuite.hpp  UeConnectionSpawnerTestSuite.cpp  UeConnectionSpawnerTestSuite.hpp  UeConnectionTestSuite.cpp  UeConnectionTestSuite.hpp  UeRelayTestSuite.cpp  UeRelayTestSuite.hpp
BTS/Tests/Application/Mocks/: IApplicationEnvironmentMock.cpp  IApplicationEnvironmentMock.hpp  IComponentMock.cpp  IComponentMock.hpp  IConsoleMock.cpp  IConsoleMock.hpp  IUeConnectionFactoryMock.cpp  IUeConnectionFactoryMock.hpp  IUeConnectionMock.cpp  IUeConnectionMock.hpp  IUeRelayMock.cpp  IUeRelayMock.hpp  UeSlotMock.cpp  UeSlotMock.hpp
BTS/Tests/Application/Printers/: UeSlotPrint.cpp  UeSlotPrint.hpp
COMMON/: .gitignore  CMakeLists.txt  Messages.hpp
COMMON/CommonEnvironment/: ITransport.hpp
COMMON/Config/: MultiLineConfig.cpp  MultiLineConfig.hpp
COMMON/Logger/: ILogger.hpp  Logger.cpp  Logger.hpp  PrefixedLogger.cpp  PrefixedLogger.hpp
COMMON/Messages/: BinaryMessage.cpp  BinaryMessage.hpp  BtsId.cpp  BtsId.hpp  IncomingMessage.cpp  IncomingMessage.hpp  LimitedVector.cpp  LimitedVector.hpp  MessageHeader.cpp  MessageHeader.hpp  MessageId.cpp  MessageId.hpp  OutgoingMessage.cpp  OutgoingMessage.hpp  PhoneNumber.cpp  PhoneNumber.hpp
COMMON/TestCommands/: TestCommands.cpp  TestCommands.hpp
COMMON/Tests/: CMakeLists.txt  EnumTraitsTestSuite.cpp  ILoggerTestSuite.cpp  IncomingMessageTestSuite.cpp  LoggerTestSuite.cpp  MultiLineConfigTestSuite.cpp  OutgoingMessageTestSuite.cpp  PrefixedLoggerTestSuite.cpp
COMMON/Tests/Mocks/: CMakeLists.txt  ILoggerMock.cpp  ILoggerMock.hpp  ITransportMock.cpp  ITransportMock.hpp
COMMON/Traits/: EnumTraits.cpp  EnumTraits.hpp
Doc/: CPPTelecom_Project_UE_Specification.docx  InitialPortsDesign.plantuml  InitialStateDesign.plantuml  ProjectAndSoftwareRequirements.docx
Doc/Lectures/: EmptyFile  Git Introduction.pptx  wymagania przedmiotu.pptx
Doc/Lectures/01. Polymorphism/: 01.Polymorphism.pptx  CMakeLists.txt
Doc/Lectures/01. Polymorphism/dynamic_polymorphism/: main.cpp
Doc/Lectures/01. Polymorphism/operator_overload/: extras.hpp  main.cpp
Doc/Lectures/01. Polymorphism/static_polymorphism/: main.cpp
Doc/Lectures/01. Polymorphism/virtual_destructor/: main.cpp
UE/: .gitignore  CMakeLists.txt  main.cpp
UE/Application/: Application.cpp  Application.hpp  CMakeLists.txt  Context.hpp  IEventsHandler.hpp
UE/Application/Ports/: BtsPort.cpp  BtsPort.hpp  IBtsPort.hpp  ITimerPort.hpp  IUserPort.hpp  TimerPort.cpp  TimerPort.hpp  UserPort.cpp  UserPort.hpp
UE/Application/States/: BaseState.cpp  BaseState.hpp  ConnectedState.cpp  ConnectedState.hpp  ConnectingState.cpp  ConnectingState.hpp  NotConnectedState.cpp  NotConnectedState.hpp
UE/ApplicationEnvironment/: ApplicationEnvironmentFactory.cpp  ApplicationEnvironmentFactory.hpp  CMakeLists.txt  IApplicationEnvironment.cpp  IApplicationEnvironment.hpp  ITransport.cpp  ITransport.hpp  IUeGui.cpp  IUeGui.hpp
UE/ApplicationEnvironment/UeGui/: ICallMode.cpp  ICallMode.hpp  IDialMode.cpp  IDialMode.hpp  IListViewMode.cpp  IListViewMode.hpp  ISmsComposeMode.cpp  ISmsComposeMode.hpp  ITextMode.cpp  ITextMode.hpp
UE/QtApplicationEnvironment/: ApplicationEnvironment.cpp  ApplicationEnvironment.hpp  ApplicationEnvironmentFactory.cpp  CMakeLists.txt
UE/QtApplicationEnvironment/GUI/: CMakeLists.txt  QtAlertMode.cpp  QtAlertMode.hpp  QtApplication.cpp  QtApplication.hpp  QtCallMode.cpp  QtCallMode.hpp  QtDialMode.cpp  QtDialMode.hpp  QtMainWindow.cpp  QtMainWindow.hpp  QtPhoneNumberEdit.cpp  QtPhoneNumberEdit.hpp  QtSelectionListMode.cpp  QtSelectionListMode.hpp  QtSmsComposeMode.cpp  QtSmsComposeMode.hpp  QtStackedWidget.cpp  QtStackedWidget.hpp  QtSubmitTextEdit.cpp  QtSubmitTextEdit.hpp  QtTextViewMode.cpp  QtTextViewMode.hpp  QtUeGui.cpp  QtUeGui.hpp  QtUeModeWidget.cpp  QtUeModeWidget.hpp
UE/QtApplicationEnvironment/Transport/: CMakeLists.txt  Transport.cpp  Transport.hpp
UE/Tests/: CMakeLists.txt
UE/Tests/Application/: .gitignore  ApplicationTestSuite.cpp  CMakeLists.txt
UE/Tests/Application/Mocks/: IApplicationEnvironmentMock.cpp  IApplicationEnvironmentMock.hpp  IBtsPortMock.cpp  IBtsPortMock.hpp  ITimerPortMock.cpp  ITimerPortMock.hpp  IUeGuiMock.cpp  IUeGuiMock.hpp  IUserPortMock.cpp  IUserPortMock.hpp
UE/Tests/Application/Ports/: BtsPortTestSuite.cpp  TimerPortTestSuite.cpp  UserPortTestSuite.cpp
googletest/: .gitignore
